# snark-agg

./: .gitignore  Cargo.toml
examples/: counter.rs
src/: lib.rs
src/snarkpack/: commitment.rs  ip.rs  mod.rs  proof.rs  prover.rs  srs.rs  transcript.rs  verifier.rs
