[package]
name = "stylus-hello-world"
version = "0.1.5"
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/OffchainLabs/stylus-hello-world"
repository = "https://github.com/OffchainLabs/stylus-hello-world"
keywords = ["arbitrum", "ethereum", "stylus", "alloy"]
description = "Stylus hello world example"

[dependencies]
alloy-primitives = "0.3.1"
alloy-sol-types = "0.3.1"
mini-alloc = "0.4.2"
stylus-sdk = "0.4.3"
hex = "0.4.3"
dotenv = "0.15.0"

getrandom = { version = "0.2.12", features = ["js"], default-features = false }
ark-ff = { version = "0.4.2", default-features = false }
ark-bls12-381 = { version = "^0.4.0", default-features = false, features = ["curve"] }
rand_core = { version = "^0.6" , default-features = false}
ark-groth16 = { version = "^0.4.0", default-features = false }
rand_chacha = { version = "^0.3.0", default-features = false }
ark-serialize = { version = "^0.4.2", default-features = false, features = [ "derive" ] }
crossbeam-channel = { version = "0.5"}

ark-ec = { version = "0.4.2", default-features = false }
# ark-poly = { version = "^0.4.2", default-features = false }
ark-std = { version = "^0.4.0", default-features = false }
# ark-relations = { version = "^0.4.0", default-features = false }
ark-crypto-primitives = { version = "^0.4.0", default-features = false }
# rand = { version = "0.8" , default-features = false}
# digest = { version = "0.10.7" , default-features = false}
sha2 = { version = "^0.10" , default-features = false}
rayon = { version = "1.10.0", optional = true , default-features = false}
thiserror = { version = "^1.0" , default-features = false}
merlin = { version = "3.0.0" , default-features = false}
serde = { version = "1.0", features = ["derive"] , default-features = false}
serde_json = {version = "1.0"}

[dev-dependencies]
tokio = { version = "1.12.0", features = ["full"] }
ethers = "2.0"
eyre = "0.6.8"


[features]
export-abi = ["stylus-sdk/export-abi"]
debug = ["stylus-sdk/debug"]

default = ["parallel"]
std = ["ark-ff/std", "ark-ec/std", "ark-groth16/std", "ark-crypto-primitives/std", "ark-std/std" ]
parallel = ["std", "ark-ff/parallel", "ark-groth16/parallel", "ark-ec/parallel", "ark-crypto-primitives/parallel", "ark-std/parallel", "rayon"]

[[bin]]
name = "stylus-hello-world"
path = "src/main.rs"



[lib]
crate-type = ["lib", "cdylib"]

[profile.release]
codegen-units = 1
strip = true
lto = true
panic = "abort"
opt-level = 'z'  # 最大程度优化大小
